--- a/Basic SDL visual studio project1/Basic SDL visual studio project1.vcxproj
+++ b/Basic SDL visual studio project1/Basic SDL visual studio project1.vcxproj
@@ -164,7 +164,7 @@
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ConsoleApplication16.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">NotUsing</PrecompiledHeader>
