--- a/Basic SDL visual studio project1/Basic SDL visual studio project1.vcxproj.filters
+++ b/Basic SDL visual studio project1/Basic SDL visual studio project1.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ConsoleApplication16.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
