--- a/Basic SDL visual studio project1/Basic SDL visual studio project1.vcxproj
+++ b/Basic SDL visual studio project1/Basic SDL visual studio project1.vcxproj
@@ -161,6 +161,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Player.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
