--- a/Basic SDL visual studio project1/Basic SDL visual studio project1.vcxproj.filters
+++ b/Basic SDL visual studio project1/Basic SDL visual studio project1.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="Window.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
