--version 0.0.0.4 - Functional -- THIS IS AN ALPHA BREAKING CHANGES WILL HAPPEN -- added the Color class it repersents a color --

--- a/Basic SDL visual studio project1/Basic SDL visual studio project1.vcxproj
+++ b/Basic SDL visual studio project1/Basic SDL visual studio project1.vcxproj
@@ -160,6 +160,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Color.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Window.h" />
